--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,9 @@
     ],
     "minimum-stability": "dev",
     "require": {
-        "twig/twig": "2.x-dev"
+        "twig/twig": "2.x-dev",
+        "nikic/fast-route": "^2.0@dev",
+        "ext-pdo" : "*"
     },
     "autoload": {
         "psr-4": {
